--- a/clean_preprocess_data.ipynb
+++ b/clean_preprocess_data.ipynb
@@ -1,12 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f9a1749b",
+   "cell_type": "markdown",
+   "id": "8ff36c02",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "this is a test"
+   ]
   },
   {
    "cell_type": "markdown",
