--- a/clean_preprocess_data.ipynb
+++ b/clean_preprocess_data.ipynb
@@ -2147,10 +2147,10 @@
     "df.NameDescription = products_data['name']+' '+products_data['description']\n",
     "df.categories = products_data.categories\n",
     "\n",
-    "df.to_csv(r'products_data1.csv', index=False)\n",
+    "df.to_csv(r'products_data.csv', index=False)\n",
     "# read csv file\n",
-    "products_data1=pd.read_csv('products_data1.csv')\n",
-    "products_data1"
+    "products_data=pd.read_csv('products_data.csv')\n",
+    "products_data"
    ]
   }
  ],
