--- a/MLP_Without_Feature_Selection.ipynb
+++ b/MLP_Without_Feature_Selection.ipynb
@@ -804,6 +804,84 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed5ea305",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot confusion matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "4491f37f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'MLP87.94.pkl'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [2]\u001b[0m, in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Load saved model\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpickle\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m loaded_model \u001b[38;5;241m=\u001b[39m pickle\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mMLP87.94.pkl\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mrb\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m)\n\u001b[1;32m      4\u001b[0m classifier \u001b[38;5;241m=\u001b[39m pickle\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;28mopen\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMLP87.94.pkl\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m\"\u001b[39m))\n\u001b[1;32m      5\u001b[0m y_pred \u001b[38;5;241m=\u001b[39m classifier\u001b[38;5;241m.\u001b[39mpredict(x_test)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'MLP87.94.pkl'"
+     ]
+    }
+   ],
+   "source": [
+    "# Load saved model\n",
+    "import pickle\n",
+    "loaded_model = pickle.load(open('MLP87.94.pkl', 'rb'))\n",
+    "classifier = pickle.load(open(\"MLP87.94.pkl\",\"rb\"))\n",
+    "y_pred = classifier.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6582a3ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.patches as mpatches\n",
+    "import seaborn as sns\n",
+    "%matplotlib inline\n",
+    "\n",
+    "# Function to plot confusion matrix for the passed model and the data\n",
+    "def plot_confusion_matrix(model, X_test, y_test):\n",
+    "    \n",
+    "    classes = products_data.categories.unique()\n",
+    "    # use model to do the prediction\n",
+    "    y_pred = model.predict(x_test)\n",
+    "    # compute confusion matrix\n",
+    "    cm = confusion_matrix(y_test,y_pred)\n",
+    "    # plot confusion matrix\n",
+    "    plt.figure(figsize=(8,6))\n",
+    "    sns.heatmap(cm, cmap=plt.cm.Blues, annot=True, fmt='d', \n",
+    "                xticklabels=classes,\n",
+    "                yticklabels=classes)\n",
+    "    plt.title('Confusion matrix', fontsize=16)\n",
+    "    plt.xlabel('Predicted label', fontsize=12)\n",
+    "    plt.ylabel('Actual label', fontsize=12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "239d9aef",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# confusion matrix for our model\n",
+    "plot_confusion_matrix(classifier, x_test, y_test)"
+   ]
   }
  ],
  "metadata": {
