--- a/Test-LSTM/LSTM-2.ipynb
+++ b/Test-LSTM/LSTM-2.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "305dbd08",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "9a75f052",
    "metadata": {},
    "outputs": [
@@ -155,7 +155,7 @@
        "[44804 rows x 2 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "d7b4fd8b",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
        "(18,)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "8cdd225b",
    "metadata": {},
    "outputs": [
@@ -215,7 +215,7 @@
        "Name: categories, dtype: int64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "395fa853",
    "metadata": {},
    "outputs": [],
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "id": "7682765d",
    "metadata": {},
    "outputs": [
@@ -264,7 +264,7 @@
        " 'Pet Supplies']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 8,
    "id": "80be92b1",
    "metadata": {},
    "outputs": [],
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "id": "459e24b6",
    "metadata": {},
    "outputs": [
@@ -367,33 +367,33 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>10946</th>\n",
-       "      <td>eddie bauer integrated convenience stroller ed...</td>\n",
-       "      <td>Baby Products</td>\n",
+       "      <th>32441</th>\n",
+       "      <td>sprout house certified organic nongmo sproutin...</td>\n",
+       "      <td>Grocery &amp; Gourmet Food</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1411</th>\n",
-       "      <td>pioneer ftmbk family treasure deluxe byinch me...</td>\n",
-       "      <td>Arts, Crafts &amp; Sewing</td>\n",
+       "      <th>29469</th>\n",
+       "      <td>american dj snapshot ii  watt variable speed s...</td>\n",
+       "      <td>Musical Instruments</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23047</th>\n",
-       "      <td>great american puzzle factory underwater mardi...</td>\n",
-       "      <td>Toys &amp; Games</td>\n",
+       "      <th>16971</th>\n",
+       "      <td>winning move ttc predator deadliest efficient ...</td>\n",
+       "      <td>Sports &amp; Outdoors</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>27729</th>\n",
-       "      <td>whirlpool kitrc gas dryer connector kit everyt...</td>\n",
-       "      <td>Appliances</td>\n",
+       "      <th>35381</th>\n",
+       "      <td>zoo med screen cover door   gallon tank zoo me...</td>\n",
+       "      <td>Pet Supplies</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>23013</th>\n",
-       "      <td>invention project electricity zippy text compu...</td>\n",
-       "      <td>Toys &amp; Games</td>\n",
+       "      <th>2933</th>\n",
+       "      <td>lg vortex phone standard red led wall ac home ...</td>\n",
+       "      <td>Cell Phones &amp; Accessories</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -403,33 +403,33 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>16663</th>\n",
-       "      <td>okinawan tournament bag bag virtually every ac...</td>\n",
-       "      <td>Sports &amp; Outdoors</td>\n",
+       "      <th>27483</th>\n",
+       "      <td>whirlpool  hose washer whirlpool  hose washer ...</td>\n",
+       "      <td>Appliances</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8299</th>\n",
-       "      <td>powerbar performance energy bar chocolate   g ...</td>\n",
-       "      <td>Health &amp; Personal Care</td>\n",
+       "      <th>2970</th>\n",
+       "      <td>motorola slvr l unlocked phone camera mpvideo ...</td>\n",
+       "      <td>Cell Phones &amp; Accessories</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>28483</th>\n",
-       "      <td>alesis adat hd digital recorder alesis adat hd...</td>\n",
-       "      <td>Musical Instruments</td>\n",
+       "      <th>23644</th>\n",
+       "      <td>falling goblin edition celebrate th anniversar...</td>\n",
+       "      <td>Toys &amp; Games</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>24490</th>\n",
-       "      <td>pop life  desk pad pop life  desk pad pop life...</td>\n",
-       "      <td>Office Products</td>\n",
+       "      <th>1419</th>\n",
+       "      <td>oz heavy body acrylic color paint color magen...</td>\n",
+       "      <td>Arts, Crafts &amp; Sewing</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>21278</th>\n",
-       "      <td>northstar trifuel generator cc  surge watt  ra...</td>\n",
-       "      <td>Automotive</td>\n",
+       "      <th>31096</th>\n",
+       "      <td>dubro  way socket wrench xl since  broberg fam...</td>\n",
+       "      <td>Industrial &amp; Scientific</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -439,35 +439,35 @@
       ],
       "text/plain": [
        "                                         NameDescription  \\\n",
-       "10946  eddie bauer integrated convenience stroller ed...   \n",
-       "1411   pioneer ftmbk family treasure deluxe byinch me...   \n",
-       "23047  great american puzzle factory underwater mardi...   \n",
-       "27729  whirlpool kitrc gas dryer connector kit everyt...   \n",
-       "23013  invention project electricity zippy text compu...   \n",
+       "32441  sprout house certified organic nongmo sproutin...   \n",
+       "29469  american dj snapshot ii  watt variable speed s...   \n",
+       "16971  winning move ttc predator deadliest efficient ...   \n",
+       "35381  zoo med screen cover door   gallon tank zoo me...   \n",
+       "2933   lg vortex phone standard red led wall ac home ...   \n",
        "...                                                  ...   \n",
-       "16663  okinawan tournament bag bag virtually every ac...   \n",
-       "8299   powerbar performance energy bar chocolate   g ...   \n",
-       "28483  alesis adat hd digital recorder alesis adat hd...   \n",
-       "24490  pop life  desk pad pop life  desk pad pop life...   \n",
-       "21278  northstar trifuel generator cc  surge watt  ra...   \n",
+       "27483  whirlpool  hose washer whirlpool  hose washer ...   \n",
+       "2970   motorola slvr l unlocked phone camera mpvideo ...   \n",
+       "23644  falling goblin edition celebrate th anniversar...   \n",
+       "1419    oz heavy body acrylic color paint color magen...   \n",
+       "31096  dubro  way socket wrench xl since  broberg fam...   \n",
        "\n",
-       "                   categories  LABEL  \n",
-       "10946           Baby Products      0  \n",
-       "1411    Arts, Crafts & Sewing      0  \n",
-       "23047            Toys & Games      0  \n",
-       "27729              Appliances      0  \n",
-       "23013            Toys & Games      0  \n",
-       "...                       ...    ...  \n",
-       "16663       Sports & Outdoors      0  \n",
-       "8299   Health & Personal Care      0  \n",
-       "28483     Musical Instruments      0  \n",
-       "24490         Office Products      0  \n",
-       "21278              Automotive      0  \n",
+       "                      categories  LABEL  \n",
+       "32441     Grocery & Gourmet Food      0  \n",
+       "29469        Musical Instruments      0  \n",
+       "16971          Sports & Outdoors      0  \n",
+       "35381               Pet Supplies      0  \n",
+       "2933   Cell Phones & Accessories      0  \n",
+       "...                          ...    ...  \n",
+       "27483                 Appliances      0  \n",
+       "2970   Cell Phones & Accessories      0  \n",
+       "23644               Toys & Games      0  \n",
+       "1419       Arts, Crafts & Sewing      0  \n",
+       "31096    Industrial & Scientific      0  \n",
        "\n",
        "[35766 rows x 3 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -478,35 +478,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "id": "132bfdad",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Baby Products                1987\n",
-       "Arts, Crafts & Sewing        1987\n",
-       "Tools & Home Improvement     1987\n",
-       "Industrial & Scientific      1987\n",
-       "Clothing, Shoes & Jewelry    1987\n",
-       "Pet Supplies                 1987\n",
-       "Automotive                   1987\n",
-       "Cell Phones & Accessories    1987\n",
        "Grocery & Gourmet Food       1987\n",
-       "Sports & Outdoors            1987\n",
-       "Patio, Lawn & Garden         1987\n",
-       "Health & Personal Care       1987\n",
-       "Office Products              1987\n",
        "Musical Instruments          1987\n",
-       "Electronics                  1987\n",
-       "Appliances                   1987\n",
+       "Office Products              1987\n",
        "Toys & Games                 1987\n",
+       "Automotive                   1987\n",
+       "Tools & Home Improvement     1987\n",
+       "Arts, Crafts & Sewing        1987\n",
+       "Appliances                   1987\n",
+       "Health & Personal Care       1987\n",
+       "Baby Products                1987\n",
+       "Electronics                  1987\n",
+       "Patio, Lawn & Garden         1987\n",
+       "Clothing, Shoes & Jewelry    1987\n",
+       "Industrial & Scientific      1987\n",
+       "Cell Phones & Accessories    1987\n",
+       "Pet Supplies                 1987\n",
+       "Sports & Outdoors            1987\n",
        "Beauty                       1987\n",
        "Name: categories, dtype: int64"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,37 +517,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "id": "ce096eed",
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10946     5\n",
-      "1411      0\n",
-      "23047    11\n",
-      "27729    13\n",
-      "23013    11\n",
-      "19274     9\n",
-      "1574      0\n",
-      "18346     9\n",
-      "1893      0\n",
-      "29005    14\n",
+      "32441    16\n",
+      "29469    14\n",
+      "16971     8\n",
+      "35381    17\n",
+      "2933      1\n",
+      "29907    15\n",
+      "5629      2\n",
+      "12872     6\n",
+      "19394     9\n",
+      "5701      2\n",
       "Name: LABEL, dtype: int64\n",
-      "[[0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0.]\n",
+      "[[0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1.]\n",
+      " [0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0.]\n",
+      " [0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
+      " [0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
       " [0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-      " [0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 1. 0. 0. 0.]]\n"
+      " [0. 0. 1. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0. 0.]]\n"
      ]
     }
    ],
@@ -574,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 12,
    "id": "59c788a7",
    "metadata": {},
    "outputs": [
@@ -582,7 +580,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 98779 unique tokens.\n"
+      "Found 99207 unique tokens.\n"
      ]
     }
    ],
@@ -600,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 13,
    "id": "ec6f9669",
    "metadata": {},
    "outputs": [],
@@ -610,20 +608,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 16,
    "id": "3e6020aa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0., 0., 0., 0., 0., 1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
-       "        0., 0.],\n",
-       "       [1., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "        1., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0.,\n",
        "        0., 0.]], dtype=float32)"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
